--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
-    "name": "zy-time-tools",
-    "version": "1.0",
+    "name": "zy-time-tool",
+    "version": "0.1",
     "description": "时间日期工具",
     "icons": {
         "16": "images/icon16.png",
@@ -18,6 +18,7 @@
     },
     "background": {
         "scripts": [
+            "js/moment.min.js",
             "js/background.js"
         ]
     },
